--- a/index.html
+++ b/index.html
@@ -298,7 +298,8 @@ body {
     <div class="fold-section">
       <div class="fold-title" data-target="lei"><span>⚠️</span> 我雷</div>
       <div id="lei" class="fold-content">
-        <div>极度恨国和品客，两个二极管给我滚谢谢喵。</div>
+        <div>极度恨国和品客。
+	idia和azul，vil，ace嬷嬷婉拒。</div>
       </div>
     </div>
 
